Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
           </summary>
           <div class="accordion-content">
             <p>
-              這裡是您的作品集展示區。未來您可以將後台建置好的專案，用 PHP
-              動態生成在這裡。建議展示 3-5
-              個最精華的專案，並為每個專案附上詳細的案例研究。
+              這裡是您的作品集展示區。您可以點擊下方的技能標籤來篩選專案。
             </p>
+            <!-- NEW: Filter buttons container -->
+            <div id="portfolio-filters" class="portfolio-filters">
+              <!-- 篩選按鈕將由 JavaScript 動態載入 -->
+            </div>
             <div class="portfolio-list">
               <!-- 專案列表將由 JavaScript 動態載入 -->
             </div>
