--- a/index.html
+++ b/index.html
@@ -14,95 +14,68 @@
   </head>
   <body>
     <div class="portfolio-container">
-      <!-- Header 已被移除 -->
-
       <div class="hero-content">
         <div class="name-container">
           <div class="name-line">
-            <span>B</span>
-            <div class="eye-container">
-              <div class="eye"></div>
-            </div>
-            <span>B</span>
+            <span>B</span><div class="eye-container"><div class="eye"></div></div><span>B</span>
           </div>
-
           <div class="name-line">
-            <span>TS</span>
-            <div class="eye-container">
-              <div class="eye"></div>
-            </div>
-            <span>U</span>
+            <span>T</span><span>S</span><div class="eye-container"><div class="eye"></div></div><span>U</span>
           </div>
         </div>
-
         <div class="tagline-capsule">
-          <p>
-            網頁設計 · 技能包含 PHP、MySQL、CSS 與 UI/UX · 一起創造精彩作品 ·
-          </p>
+          <p>網頁設計 · 技能包含 PHP、MySQL、CSS 與 UI/UX · 一起創造精彩作品 ·</p>
         </div>
-
-        <img
-          src="your-photo.png"
-          alt="Bob Tsou 的大頭照"
-          class="profile-photo"
-        />
+        <img src="your-photo.png" alt="Bob Tsou 的大頭照" class="profile-photo" />
       </div>
 
-      <!-- 可收合內容區塊 -->
       <section class="accordion-section">
-        <details class="accordion-item" open>
-          <!-- 預設打開第一個 -->
-          <summary class="accordion-header">
+        <div class="accordion-item is-open">
+          <div class="accordion-header">
             <h3>ABOUT</h3>
-          </summary>
+            <span class="accordion-icon">&gt;</span>
+          </div>
           <div class="accordion-content">
-            <p>
-              這裡是您的自我介紹。您可以分享您從平面設計轉職到網頁開發的心路歷程，強調您獨特的跨領域優勢：既有設計師的美感與使用者思維，也具備了將想法用程式碼實作成產品的開發能力。
-            </p>
-            <div class="timeline">
-              <div class="timeline-item">
-                <span class="timeline-year">2022</span>
-                <span class="timeline-desc">平面設計師</span>
-              </div>
-              <div class="timeline-item">
-                <span class="timeline-year">2023</span>
-                <span class="timeline-desc">轉職學習前端/後端</span>
-              </div>
-              <div class="timeline-item">
-                <span class="timeline-year">2024</span>
-                <span class="timeline-desc">網頁開發工程師</span>
+            <div class="content-wrapper">
+              <p>這裡是您的自我介紹。您可以分享您從平面設計轉職到網頁開發的心路歷程，強調您獨特的跨領域優勢...</p>
+              <div class="timeline">
+                <div class="timeline-item"><span class="timeline-year">2022</span><span class="timeline-desc">平面設計師</span></div>
+                <div class="timeline-item"><span class="timeline-year">2023</span><span class="timeline-desc">轉職學習前端/後端</span></div>
+                <div class="timeline-item"><span class="timeline-year">2024</span><span class="timeline-desc">網頁開發工程師</span></div>
               </div>
             </div>
           </div>
-        </details>
-        <details class="accordion-item">
-          <summary class="accordion-header">
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
             <h3>PORTFOLIO</h3>
-          </summary>
+            <span class="accordion-icon">&gt;</span>
+          </div>
           <div class="accordion-content">
-            <p>
-              這裡是您的作品集展示區。您可以點擊下方的技能標籤來篩選專案。
-            </p>
-            <!-- NEW: Filter buttons container -->
-            <div id="portfolio-filters" class="portfolio-filters">
-              <!-- 篩選按鈕將由 JavaScript 動態載入 -->
-            </div>
-            <div class="portfolio-list">
-              <!-- 專案列表將由 JavaScript 動態載入 -->
+            <div class="content-wrapper">
+              <p>這裡是您的作品集展示區。您可以點擊下方的技能標籤來篩選專案，也可以左右拖曳或點擊按鈕來瀏覽。</p>
+              <div id="portfolio-filters" class="portfolio-filters"></div>
+              <div class="portfolio-scroller">
+                <div class="portfolio-list"></div>
+              </div>
+              <div class="scroller-nav">
+                <button class="nav-btn prev-btn">&lt;</button>
+                <button class="nav-btn next-btn">&gt;</button>
+              </div>
             </div>
           </div>
-        </details>
-        <details class="accordion-item">
-          <summary class="accordion-header">
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
             <h3>CONTACT</h3>
-          </summary>
-          <div class="accordion-content">
-            <p>
-              這裡是您的聯絡方式區塊。您可以放置一個聯絡表單，讓潛在雇主或合作夥伴能輕易地與您聯繫。表單後端可以用您擅長的
-              PHP 來處理。
-            </p>
+            <span class="accordion-icon">&gt;</span>
           </div>
-        </details>
+          <div class="accordion-content">
+            <div class="content-wrapper">
+              <p>這裡是您的聯絡方式區塊。您可以放置一個聯絡表單，讓潛在雇主或合作夥伴能輕易地與您聯繫。</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <footer class="main-footer">
@@ -110,17 +83,16 @@
       </footer>
     </div>
 
-    <!-- 專案詳情 Modal -->
     <div id="project-modal" class="modal">
       <div class="modal-content">
         <span class="close-button" title="關閉">&times;</span>
-        <div id="modal-body">
-          <!-- 專案詳情將會載入於此 -->
-        </div>
+        <div id="modal-body"></div>
       </div>
     </div>
 
-    <!-- 引入 JavaScript 檔案來處理互動功能 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Observer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
