--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="https://www.google.com/s2/favicons?domain=pixelfed.org" type="image/png">
   </head>
   <body>
-    <!-- ========= 載入畫面 (結構更新) ========= -->
     <div id="loading-screen">
-      <!-- 新增：像素網格容器 -->
       <div id="pixel-grid"></div>
       <div class="loading-text-container">
-        <h2 class="loading-title">BOB TSOU</h2>
-        <p class="loading-subtitle">PORTFOLIO</p>
+        <h2 class="loading-title"></h2>
+        <p class="loading-subtitle"></p>
         <p class="press-start">PRESS START</p>
       </div>
     </div>
     
-    <!-- 自訂滑鼠游標 -->
     <div class="cursor-dot-outline"></div>
     <div class="cursor-dot"></div>
 
-    <!-- 主要內容容器 -->
     <div class="portfolio-container">
       <div class="hero-content">
         <div class="name-container">
@@ -40,9 +37,20 @@
           </div>
         </div>
         <div class="tagline-capsule">
-          <p>網頁設計 · 技能包含 PHP、MySQL、CSS 與 UI/UX · 一起創造精彩作品 ·</p>
+          <p>網頁設計 · 技能包含 PHP、MySQL、CSS 與 UI/UX · 一起創造精彩作品 ·&nbsp;</p>
+          <p>網頁設計 · 技能包含 PHP、MySQL、CSS 與 UI/UX · 一起創造精彩作品 ·&nbsp;</p>
         </div>
         <img src="your-photo.png" alt="Bob Tsou 的大頭照" class="profile-photo" />
+
+        <div class="scroll-down-indicator">
+            <div class="mouse"></div>
+        </div>
+
+        <div class="hero-shape">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path id="wave-path" d="M0,64 C300,64 400,32 600,32 C800,32 900,64 1200,64 L1200,150 L0,150 Z" class="shape-fill"></path>
+            </svg>
+        </div>
       </div>
 
       <section class="accordion-section">
@@ -106,12 +114,12 @@
       </div>
     </div>
 
-    <!-- 音效開關 -->
     <button id="audio-toggle-btn" class="is-hidden">🔊</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Observer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
     <script src="script.js"></script>
   </body>
