--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOB TSOU | Web & UI/UX Designer</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -41,22 +43,22 @@
     <div class="portfolio-container">
       <header class="hero-content">
         <div class="particles-container"></div>
-
+        
         <div class="name-container">
           <div class="name-line">
-            <span class="glitch" data-text="B">B</span>
+            <span>B</span>
             <div class="eye-container">
               <div class="eye"></div>
             </div>
-            <span class="glitch" data-text="B">B</span>
+            <span>B</span>
           </div>
           <div class="name-line">
-            <span class="glitch" data-text="T">T</span>
-            <span class="glitch" data-text="S">S</span>
+            <span>T</span>
+            <span>S</span>
             <div class="eye-container">
               <div class="eye"></div>
             </div>
-            <span class="glitch" data-text="U">U</span>
+            <span>U</span>
           </div>
         </div>
 
@@ -109,269 +111,7 @@
 
       <main class="accordion-section">
         <div class="accordion" id="mainAccordion">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingAbout">
-              <button
-                class="accordion-button"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseAbout"
-                aria-expanded="true"
-                aria-controls="collapseAbout"
-              >
-                ABOUT
-                <div class="accordion-icon-plus">
-                  <span></span><span></span>
-                </div>
-              </button>
-            </h2>
-            <div
-              id="collapseAbout"
-              class="accordion-collapse collapse show"
-              aria-labelledby="headingAbout"
-              data-bs-parent="#mainAccordion"
-            >
-              <div class="accordion-body">
-                <p class="highlight-intro">
-                  擁有超過7年平面設計與電商行銷經驗，擅長商品視覺規劃、促銷活動設計與廣告素材製作，具備跨平台整合行銷實績(蝦皮、Momo、Shopline)。為進一步結合設計與開發能力，我投入920小時密集網頁開發訓練，已熟悉HTML、CSS、JavaScript、Bootstrap、Git
-                  等前端技能。熱衷於打造具商業價值與良好使用者體驗的數位產品。
-                </p>
-
-                <h4 class="section-title">SKILLS</h4>
-                <div class="skills-grid">
-                  <div class="skill-card">
-                    <h5>設計 (Design)</h5>
-                    <p>Photoshop, Illustrator, Figma</p>
-                  </div>
-                  <div class="skill-card">
-                    <h5>前端 (Front-end)</h5>
-                    <p>HTML, CSS, JavaScript, Bootstrap</p>
-                  </div>
-                  <div class="skill-card">
-                    <h5>後端 (Back-end)</h5>
-                    <p>PHP, MySQL</p>
-                  </div>
-                  <div class="skill-card">
-                    <h5>其他 (Others)</h5>
-                    <p>Git, GitHub</p>
-                  </div>
-                </div>
-
-                <h4 class="section-title">WORK EXPERIENCE</h4>
-                <div class="timeline">
-                  <div class="timeline-item">
-                    <div class="timeline-meta">
-                      <span class="timeline-year">2024 - 2025</span>
-                      <span class="timeline-company">東城國際</span>
-                    </div>
-                    <div class="timeline-content">
-                      <h5 class="timeline-role">行銷美編專員</h5>
-                      <p>
-                        主導 PChome24h
-                        活動頁面設計與動線優化，創下單檔活動頁面轉換率提升15%-25%的紀錄。並設計社群廣告圖文，成功提升互動率20%-30%。
-                      </p>
-                    </div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-meta">
-                      <span class="timeline-year">2023 - 2024</span>
-                      <span class="timeline-company">品鞋公司</span>
-                    </div>
-                    <div class="timeline-content">
-                      <h5 class="timeline-role">電商行銷專員</h5>
-                      <p>
-                        獨立營運 momo
-                        與蝦皮賣場，創下月營業額穩定維持在80-100萬元的成績。執行廣告投放，成功帶動品牌曝光與業績成長。
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <h4 class="section-title">EDUCATION</h4>
-                <div class="timeline">
-                  <div class="timeline-item">
-                    <div class="timeline-meta">
-                      <span class="timeline-year">2025</span>
-                      <span class="timeline-company">泰山職訓局</span>
-                    </div>
-                    <div class="timeline-content">
-                      <h5 class="timeline-role">PHP資料庫網頁設計 (920小時)</h5>
-                      <p>
-                        學習內容包含: PHP程式設計、MySQL 資料庫管理、API串接等。
-                      </p>
-                    </div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-meta">
-                      <span class="timeline-year">2012 - 2014</span>
-                      <span class="timeline-company">輔仁大學</span>
-                    </div>
-                    <div class="timeline-content">
-                      <h5 class="timeline-role">應用美術系 (肄業)</h5>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingPortfolio">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapsePortfolio"
-                aria-expanded="false"
-                aria-controls="collapsePortfolio"
-              >
-                PORTFOLIO
-                <div class="accordion-icon-plus">
-                  <span></span><span></span>
-                </div>
-              </button>
-            </h2>
-            <div
-              id="collapsePortfolio"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingPortfolio"
-              data-bs-parent="#mainAccordion"
-            >
-              <div class="accordion-body">
-                <p>這裡是我的作品集展示區。點擊下方的按鈕來篩選專案。</p>
-                <div id="portfolio-filters" class="portfolio-filters"></div>
-                <div class="portfolio-scroller">
-                  <div class="portfolio-list"></div>
-                </div>
-                <div class="scroller-nav">
-                  <button class="nav-btn prev-btn">&lt;</button>
-                  <button class="nav-btn next-btn">&gt;</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingContact">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseContact"
-                aria-expanded="false"
-                aria-controls="collapseContact"
-              >
-                CONTACT
-                <div class="accordion-icon-plus">
-                  <span></span><span></span>
-                </div>
-              </button>
-            </h2>
-            <div
-              id="collapseContact"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingContact"
-              data-bs-parent="#mainAccordion"
-            >
-              <div class="accordion-body">
-                <div class="contact-intro">
-                  <h4>🚀 準備開始合作了嗎？</h4>
-                  <p>
-                    我熱衷於發揮設計與技術的雙重優勢，期待與您一同打造出色的數位產品！
-                  </p>
-                </div>
-                <div class="container-fluid">
-                  <div class="row g-4">
-                    <div class="col-lg-5">
-                      <div class="contact-info">
-                        <div class="contact-method">
-                          <div class="contact-icon">📧</div>
-                          <div class="contact-details">
-                            <h5>Email</h5>
-                            <p>
-                              <a href="mailto:hello@bb-made.com"
-                                >hello@bb-made.com</a
-                              >
-                            </p>
-                          </div>
-                        </div>
-                        <div class="contact-method">
-                          <div class="contact-icon">📱</div>
-                          <div class="contact-details">
-                            <h5>手機</h5>
-                            <p>0912-345-678</p>
-                          </div>
-                        </div>
-                        <div class="contact-method">
-                          <div class="contact-icon">🌐</div>
-                          <div class="contact-details">
-                            <h5>個人網站</h5>
-                            <p>
-                              <a href="http://bb-made.com" target="_blank"
-                                >bb-made.com</a
-                              >
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-7">
-                      <form class="contact-form" id="contact-form">
-                        <div class="form-group floating-label-group">
-                          <input
-                            type="text"
-                            id="contact-name"
-                            name="name"
-                            required
-                            placeholder=" "
-                          />
-                          <label for="contact-name">姓名 *</label>
-                        </div>
-                        <div class="form-group floating-label-group">
-                          <input
-                            type="email"
-                            id="contact-email"
-                            name="email"
-                            required
-                            placeholder=" "
-                          />
-                          <label for="contact-email">Email *</label>
-                        </div>
-                        <div class="form-group">
-                          <label for="contact-subject" class="static-label"
-                            >主旨 *</label
-                          >
-                          <select id="contact-subject" name="subject" required>
-                            <option value="">請選擇合作類型</option>
-                            <option value="website">網站開發</option>
-                            <option value="design">UI/UX 設計</option>
-                            <option value="fullstack">全端開發</option>
-                          </select>
-                        </div>
-                        <div class="form-group floating-label-group">
-                          <textarea
-                            id="contact-message"
-                            name="message"
-                            rows="4"
-                            required
-                            placeholder=" "
-                          ></textarea>
-                          <label for="contact-message">訊息 *</label>
-                        </div>
-                        <button type="submit" class="submit-btn">
-                          <span class="btn-text">發送訊息</span>
-                          <span class="btn-loading" style="display: none"
-                            >發送中...</span
-                          >
-                        </button>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+           </div>
       </main>
 
       <footer class="main-footer">
@@ -383,45 +123,23 @@
       class="modal fade"
       id="projectModal"
       tabindex="-1"
-      aria-labelledby="projectModalLabel"
       aria-hidden="true"
     >
-      <div
-        class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable"
-      >
+      <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="projectModalLabel">專案詳情</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
           </div>
-          <div class="modal-body" id="modal-body-content"></div>
-        </div>
       </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Observer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+    
     <script src="script.js"></script>
   </body>
 </html>
