--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>BOB TSOU | Web & UI/UX Designer</title>
 
     <!-- 字體預載入優化 -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,900&display=swap"></noscript>
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,900&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,900&display=swap"
+    /></noscript>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -43,22 +55,32 @@
     <div class="portfolio-container">
       <header class="hero-content">
         <div class="particles-container"></div>
-        
+
         <div class="name-container">
           <div class="name-line">
-            <span class="ultra-bold">B</span>
-            <div class="eye-container" role="button" tabindex="0" aria-label="切換主題">
+            <span>B</span>
+            <div
+              class="eye-container"
+              role="button"
+              tabindex="0"
+              aria-label="切換主題"
+            >
               <div class="eye"></div>
             </div>
-            <span class="ultra-bold">B</span>
+            <span>B</span>
           </div>
           <div class="name-line">
-            <span class="ultra-bold">T</span>
-            <span class="ultra-bold">S</span>
-            <div class="eye-container" role="button" tabindex="0" aria-label="切換主題">
+            <span>T</span>
+            <span>S</span>
+            <div
+              class="eye-container"
+              role="button"
+              tabindex="0"
+              aria-label="切換主題"
+            >
               <div class="eye"></div>
             </div>
-            <span class="ultra-bold">U</span>
+            <span>U</span>
           </div>
         </div>
 
@@ -82,8 +104,12 @@
             class="profile-photo"
           />
           <div class="profile-actions">
-            <a href="resume-bob-tsou.pdf" class="cta-secondary" download aria-label="下載履歷 PDF 檔案">
-              <span class="cta-icon">📄</span>
+            <a
+              href="resume-bob-tsou.pdf"
+              class="cta-secondary"
+              download
+              aria-label="下載履歷 PDF 檔案"
+            >
               <span class="cta-text">下載履歷</span>
             </a>
           </div>
@@ -110,8 +136,7 @@
       </header>
 
       <main class="accordion-section">
-        <div class="accordion" id="mainAccordion">
-           </div>
+        <div class="accordion" id="mainAccordion"></div>
       </main>
 
       <footer class="main-footer">
@@ -119,27 +144,29 @@
       </footer>
     </div>
 
-    <div
-      class="modal fade"
-      id="projectModal"
-      tabindex="-1"
-      aria-hidden="true"
-    >
+    <div class="modal fade" id="projectModal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content">
-          </div>
+        <div class="modal-content"></div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Observer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
-    
+
     <script src="script.js"></script>
   </body>
 </html>
