--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="light-mode">
+    <div id="preloader">
+      <div class="preloader-name">
+        <span>B</span>
+        <span>O</span>
+        <!-- <div class="preloader-eye"></div> -->
+        <span>B</span>
+                <span>&nbsp</span>
+
+        <span>T</span>
+        <span>S</span>
+        <span>O</span>
+        <!-- <div class="preloader-eye"></div> -->
+        <span>U</span>
+      </div>
+    </div>
     <div class="portfolio-container">
       <header class="hero-content">
         <div class="particles-container"></div>
@@ -752,14 +767,26 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      defer
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      defer
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"
+      defer
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"
+      defer
+    ></script>
 
     <!-- 錯誤監控腳本 - 在主腳本之前載入 -->
     <script src="error-monitor.js"></script>
-    
+
     <script src="script.js"></script>
   </body>
 </html>
