feat: 更新預載動畫效果，新增 portfolio 標題，優化 CSS 結構與樣式

--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
       <div class="preloader-name">
         <span>B</span>
         <span>O</span>
-        <!-- <div class="preloader-eye"></div> -->
         <span>B</span>
-                <span>&nbsp</span>
-
+        <span>&nbsp</span>
         <span>T</span>
         <span>S</span>
         <span>O</span>
-        <!-- <div class="preloader-eye"></div> -->
         <span>U</span>
+      </div>
+      <div class="preloader-name">
+        <span>portfolio</span>
       </div>
     </div>
     <div class="portfolio-container">
@@ -204,11 +204,11 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingAbout">
               <button
-                class="accordion-button"
+                class="accordion-button collapsed"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseAbout"
-                aria-expanded="true"
+                aria-expanded="false"
                 aria-controls="collapseAbout"
               >
                 ABOUT
@@ -219,7 +219,7 @@
             </h2>
             <div
               id="collapseAbout"
-              class="accordion-collapse collapse show"
+              class="accordion-collapse collapse"
               aria-labelledby="headingAbout"
               data-bs-parent="#mainAccordion"
             >
