--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="light-mode">
+  <body>
     <div id="preloader">
       <div class="preloader-name">
         <span>B</span>
@@ -108,12 +108,7 @@
         <div class="name-container">
           <div class="name-line">
             <span>B</span>
-            <div
-              class="eye-container"
-              role="button"
-              tabindex="0"
-              aria-label="切換主題"
-            >
+            <div class="eye-container">
               <div class="eye"></div>
             </div>
             <span>B</span>
@@ -121,12 +116,7 @@
           <div class="name-line">
             <span>T</span>
             <span>S</span>
-            <div
-              class="eye-container"
-              role="button"
-              tabindex="0"
-              aria-label="切換主題"
-            >
+            <div class="eye-container">
               <div class="eye"></div>
             </div>
             <span>U</span>
