feat: 新增 About 區塊響應式兩欄佈局與個人照片樣式

--- a/index.html
+++ b/index.html
@@ -214,90 +214,101 @@
               data-bs-parent="#mainAccordion"
             >
               <div class="accordion-body">
-                <p class="highlight-intro">
-                  擁有超過7年平面設計與電商行銷經驗，擅長商品視覺規劃、促銷活動設計與廣告素材製作，具備跨平台整合行銷實績(蝦皮、Momo、Shopline)。為進一步結合設計與開發能力，我投入920小時密集網頁開發訓練，已熟悉HTML、CSS、JavaScript、Bootstrap、Git
-                  等前端技能。熱衷於打造具商業價值與良好使用者體驗的數位產品。
-                </p>
-                <h4 class="section-title">SKILLS</h4>
-                <div class="skills-grid">
-                  <div class="skill-group hover-lift">
-                    <h5>設計 (Design)</h5>
-                    <div class="skill-cloud">
-                      <span class="skill-capsule">Photoshop</span
-                      ><span class="skill-capsule">Illustrator</span
-                      ><span class="skill-capsule">Figma</span>
-                    </div>
-                  </div>
-                  <div class="skill-group hover-lift">
-                    <h5>開發 (Development)</h5>
-                    <div class="skill-cloud">
-                      <span class="skill-capsule">HTML</span
-                      ><span class="skill-capsule">CSS</span
-                      ><span class="skill-capsule">JavaScript</span
-                      ><span class="skill-capsule">Bootstrap</span
-                      ><span class="skill-capsule">PHP</span
-                      ><span class="skill-capsule">MySQL</span
-                      ><span class="skill-capsule">Git</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="about-grid">
-                  <div>
-                    <h4 class="section-title">WORK EXPERIENCE</h4>
-                    <div class="timeline">
-                      <div class="timeline-item">
-                        <div class="timeline-meta">
-                          <span class="timeline-year">2024 - 2025</span>
-                          <span class="timeline-company">東城國際</span>
-                        </div>
-                        <div class="timeline-content">
-                          <h5 class="timeline-role">行銷美編專員</h5>
-                          <p>
-                            主導 PChome24h
-                            活動頁面設計與動線優化，創下單檔活動頁面轉換率提升15%-25%的紀錄。並設計社群廣告圖文，成功提升互動率20%-30%。
-                          </p>
+                <div class="about-content-wrapper">
+                  <div class="about-intro-column">
+                    <img
+                      src="your-photo.png"
+                      alt="Bob Tsou 的大頭照"
+                      class="about-profile-photo"
+                    />
+                    <p class="highlight-intro">
+                      擁有超過7年平面設計與電商行銷經驗，擅長商品視覺規劃、促銷活動設計與廣告素材製作，具備跨平台整合行銷實績(蝦皮、Momo、Shopline)。為進一步結合設計與開發能力，我投入920小時密集網頁開發訓練，已熟悉HTML、CSS、JavaScript、Bootstrap、Git
+                      等前端技能。熱衷於打造具商業價值與良好使用者體驗的數位產品。
+                    </p>
+                    <h4 class="section-title">SKILLS</h4>
+                    <div class="skills-grid">
+                      <div class="skill-group hover-lift">
+                        <h5>設計 (Design)</h5>
+                        <div class="skill-cloud">
+                          <span class="skill-capsule">Photoshop</span
+                          ><span class="skill-capsule">Illustrator</span
+                          ><span class="skill-capsule">Figma</span>
                         </div>
                       </div>
-                      <div class="timeline-item">
-                        <div class="timeline-meta">
-                          <span class="timeline-year">2023 - 2024</span>
-                          <span class="timeline-company">品鞋公司</span>
-                        </div>
-                        <div class="timeline-content">
-                          <h5 class="timeline-role">電商行銷專員</h5>
-                          <p>
-                            獨立營運 momo
-                            與蝦皮賣場，創下月營業額穩定維持在80-100萬元的成績。執行廣告投放，成功帶動品牌曝光與業績成長。
-                          </p>
+                      <div class="skill-group hover-lift">
+                        <h5>開發 (Development)</h5>
+                        <div class="skill-cloud">
+                          <span class="skill-capsule">HTML</span
+                          ><span class="skill-capsule">CSS</span
+                          ><span class="skill-capsule">JavaScript</span
+                          ><span class="skill-capsule">Bootstrap</span
+                          ><span class="skill-capsule">PHP</span
+                          ><span class="skill-capsule">MySQL</span
+                          ><span class="skill-capsule">Git</span>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div>
-                    <h4 class="section-title">EDUCATION</h4>
-                    <div class="timeline">
-                      <div class="timeline-item">
-                        <div class="timeline-meta">
-                          <span class="timeline-year">2025</span>
-                          <span class="timeline-company">泰山職訓局</span>
-                        </div>
-                        <div class="timeline-content">
-                          <h5 class="timeline-role">
-                            PHP資料庫網頁設計 (920小時)
-                          </h5>
-                          <p>
-                            學習內容包含: PHP程式設計、MySQL
-                            資料庫管理、API串接等。
-                          </p>
+                  <div class="about-details-column">
+                    <div class="about-grid">
+                      <div>
+                        <h4 class="section-title">WORK EXPERIENCE</h4>
+                        <div class="timeline">
+                          <div class="timeline-item">
+                            <div class="timeline-meta">
+                              <span class="timeline-year">2024 - 2025</span>
+                              <span class="timeline-company">東城國際</span>
+                            </div>
+                            <div class="timeline-content">
+                              <h5 class="timeline-role">行銷美編專員</h5>
+                              <p>
+                                主導 PChome24h
+                                活動頁面設計與動線優化，創下單檔活動頁面轉換率提升15%-25%的紀錄。並設計社群廣告圖文，成功提升互動率20%-30%。
+                              </p>
+                            </div>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="timeline-meta">
+                              <span class="timeline-year">2023 - 2024</span>
+                              <span class="timeline-company">品鞋公司</span>
+                            </div>
+                            <div class="timeline-content">
+                              <h5 class="timeline-role">電商行銷專員</h5>
+                              <p>
+                                獨立營運 momo
+                                與蝦皮賣場，創下月營業額穩定維持在80-100萬元的成績。執行廣告投放，成功帶動品牌曝光與業績成長。
+                              </p>
+                            </div>
+                          </div>
                         </div>
                       </div>
-                      <div class="timeline-item">
-                        <div class="timeline-meta">
-                          <span class="timeline-year">2012 - 2014</span>
-                          <span class="timeline-company">輔仁大學</span>
-                        </div>
-                        <div class="timeline-content">
-                          <h5 class="timeline-role">應用美術系 (肄業)</h5>
+                      <div>
+                        <h4 class="section-title">EDUCATION</h4>
+                        <div class="timeline">
+                          <div class="timeline-item">
+                            <div class="timeline-meta">
+                              <span class="timeline-year">2025</span>
+                              <span class="timeline-company">泰山職訓局</span>
+                            </div>
+                            <div class="timeline-content">
+                              <h5 class="timeline-role">
+                                PHP資料庫網頁設計 (920小時)
+                              </h5>
+                              <p>
+                                學習內容包含: PHP程式設計、MySQL
+                                資料庫管理、API串接等。
+                              </p>
+                            </div>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="timeline-meta">
+                              <span class="timeline-year">2012 - 2014</span>
+                              <span class="timeline-company">輔仁大學</span>
+                            </div>
+                            <div class="timeline-content">
+                              <h5 class="timeline-role">應用美術系 (肄業)</h5>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
